<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AjoutEchantillon">

    <Button
        android:id="@+id/buttonAjout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="440dp"
        android:text="@string/ajout_d_echantillon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonQuit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="228dp"
        android:layout_marginTop="440dp"
        android:text="@string/quitter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/TextLibelle"
        android:layout_width="301dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="216dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:text="@string/saisir_ici_un_libelle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/TextStock"
        android:layout_width="295dp"
        android:layout_height="49dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="316dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:text="@string/saisir_ici_un_stock"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/TextCode"
        android:layout_width="301dp"
        android:layout_height="57dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="89dp"
        android:layout_marginBottom="594dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:text="@string/saisirCode"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="28dp"
        android:text="@string/saisieAjout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>